# charts-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README-zh.md  README.md  TODO.md  theme.md
.github/workflows/: ci.yml  rust.yml  test.yml
asset/image/: table.avif
benches/: bench.rs
charts-rs-derive/: Cargo.toml
charts-rs-derive/src/: lib.rs
charts_rs_derive/: Cargo.toml
charts_rs_derive/src/: lib.rs
examples/: bar.rs  line.rs  pie.rs  sankey.rs  sunburst.rs  tree.rs
examples/multi_chart/: Cargo.toml  main.rs
src/: charts.rs  lib.rs
src/charts/: bar_chart.rs  box_plot_chart.rs  calendar_chart.rs  candlestick_chart.rs  canvas.rs  chart.rs  color.rs  common.rs  component.rs  encoder.rs  error.rs  font.rs  funnel_chart.rs  gauge_chart.rs  heap_map_chart.rs  heatmap_chart.rs  horizontal_bar_chart.rs  line_chart.rs  multi_chart.rs  params.rs  path.rs  pie_chart.rs  radar_chart.rs  sankey_chart.rs  scatter_chart.rs  sunburst_chart.rs  table_chart.rs  theme.rs  tree_chart.rs  treemap_chart.rs  util.rs  waterfall_chart.rs
tests/: bar_chart.rs  box_plot_chart.rs  calendar_chart.rs  candlestick_chart.rs  color.rs  font.rs  funnel_chart.rs  gauge_chart.rs  heap_map_chart.rs  heatmap_chart.rs  horizontal_bar_chart.rs  image.rs  line_chart.rs  multi_chart.rs  pie_chart.rs  radar_chart.rs  scatter_chart.rs  sunburst_chart.rs  table_chart.rs  treemap_chart.rs  waterfall_chart.rs
