[package]
name = "charts-rs"
version = "0.3.25"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
categories = ["multimedia::images"]
keywords = ["charts", "svg", "plot", "visualization", "graph"]
description = "A charts library for rust"
license = "Apache-2.0"
homepage = "https://github.com/vicanso/charts-rs"
repository = "https://github.com/vicanso/charts-rs"
exclude = ["asset/*", "test/*", "charts-rs-derive/*", "Cargo.lock"]
readme = "./README.md"
rust-version = "1.65"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
arc-swap = "1.7.1"
charts-rs-derive = { path = "./charts-rs-derive", version = "0.2.4" }
fontdue = "0.9.3"
image = { version = "0.25.8", features = [
    "webp",
    "avif",
    "jpeg",
    "png",
], optional = true }
once_cell = "1.21.3"
regex = "1.11.1"
resvg = { version = "0.45.1", default-features = false, features = [
    "text",
    "system-fonts",
], optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
snafu = "0.8.9"
substring = "1.4.5"

[features]
image-encoder = ["resvg", "image"]

[dev-dependencies]
criterion = "0.6.0"
pretty_assertions = "1.4.1"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
