[package]
name = "charts-rs"
version = "0.4.2"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
categories = ["multimedia::images"]
keywords = ["charts", "svg", "plot", "visualization", "graph"]
description = "A charts library for rust"
license = "Apache-2.0"
homepage = "https://github.com/vicanso/charts-rs"
repository = "https://github.com/vicanso/charts-rs"
exclude = ["asset/*", "test/*", "charts-rs-derive/*", "Cargo.lock"]
readme = "./README.md"
rust-version = "1.88"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
arc-swap = "1.9.1"
charts-rs-derive = { path = "./charts-rs-derive", version = "0.3.0" }
fontdue = "0.9.3"
html-escape = "0.2.13"
image = { version = "0.25.10", features = [
    "webp",
    "avif",
    "jpeg",
    "png",
], optional = true }
once_cell = "1.21.4"
regex = "1.12.3"
resvg = { version = "0.47.0", default-features = false, features = [
    "text",
    "system-fonts",
], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snafu = "0.9.0"
substring = "1.4.5"

[features]
image-encoder = ["resvg", "image"]

[dev-dependencies]
criterion = "0.8.2"
pretty_assertions = "1.4.1"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
