[package]
name = "charts-rs-derive"
version = "0.2.4"
edition = "2021"
keywords = ["charts", "svg"]
description = "A derive library for charts-rs"
license = "Apache-2.0"
homepage = "https://github.com/vicanso/charts-rs"
repository = "https://github.com/vicanso/charts-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.103"
